--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\nites\AppData\Local\Temp\testng-eclipse--1505237378\testng-customsuite.xml</span>
+                    <span>C:\Users\nites\AppData\Local\Temp\testng-eclipse-232240108\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Selenium_Concept.Selenium_Concept.Implicit_wait" class="method navigator-link" hash-for-method="implicit_wait">implicit_wait</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Selenium_Concept.Selenium_Concept.Flilght_booking_site" class="method navigator-link" hash-for-method="FlightDate_ClassType">FlightDate_ClassType</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Selenium_Concept.Selenium_Concept.Flilght_booking_site" class="method navigator-link" hash-for-method="Open_Website">Open_Website</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Selenium_Concept.Selenium_Concept.Flilght_booking_site" class="method navigator-link" hash-for-method="SearchFromFlight">SearchFromFlight</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Selenium_Concept.Selenium_Concept.Flilght_booking_site" class="method navigator-link" hash-for-method="SearchTOFlight">SearchTOFlight</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +136,35 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Selenium_Concept.Selenium_Concept.Implicit_wait</span>
+              <span class="class-name">Selenium_Concept.Selenium_Concept.Flilght_booking_site</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="implicit_wait">
-                  </a> <!-- implicit_wait -->
-                  <span class="method-name">implicit_wait</span>
+                  <a name="FlightDate_ClassType">
+                  </a> <!-- FlightDate_ClassType -->
+                  <span class="method-name">FlightDate_ClassType</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Open_Website">
+                  </a> <!-- Open_Website -->
+                  <span class="method-name">Open_Website</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SearchFromFlight">
+                  </a> <!-- SearchFromFlight -->
+                  <span class="method-name">SearchFromFlight</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SearchTOFlight">
+                  </a> <!-- SearchTOFlight -->
+                  <span class="method-name">SearchTOFlight</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +172,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nites\AppData\Local\Temp\testng-eclipse--1505237378\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\nites\AppData\Local\Temp\testng-eclipse-232240108\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +181,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Selenium_Concept.Selenium_Concept.Implicit_wait&quot;/&gt;
+      &lt;class name=&quot;Selenium_Concept.Selenium_Concept.Flilght_booking_site&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,16 +221,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'implicit_wait')
-data.setCell(0, 2, 'Selenium_Concept.Selenium_Concept.Implicit_wait')
-data.setCell(0, 3, 2867);
+data.setCell(0, 1, 'FlightDate_ClassType')
+data.setCell(0, 2, 'Selenium_Concept.Selenium_Concept.Flilght_booking_site')
+data.setCell(0, 3, 5883);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Open_Website')
+data.setCell(1, 2, 'Selenium_Concept.Selenium_Concept.Flilght_booking_site')
+data.setCell(1, 3, 2251);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'SearchFromFlight')
+data.setCell(2, 2, 'Selenium_Concept.Selenium_Concept.Flilght_booking_site')
+data.setCell(2, 3, 1442);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'SearchTOFlight')
+data.setCell(3, 2, 'Selenium_Concept.Selenium_Concept.Flilght_booking_site')
+data.setCell(3, 3, 674);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,14 +268,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Selenium_Concept.Selenium_Concept.Implicit_wait</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Selenium_Concept.Selenium_Concept.Flilght_booking_site</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Open_broser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">implicit_wait</span>
-                <span class="method-start">3831 ms</span>
+                <span class="method-name">Open_Website</span>
+                <span class="method-start">4383 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">SearchFromFlight</span>
+                <span class="method-start">6641 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">SearchTOFlight</span>
+                <span class="method-start">8084 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">FlightDate_ClassType</span>
+                <span class="method-start">8761 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
