--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,711</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,654</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Selenium_Concept.Selenium_Concept.Implicit_wait</td><td><a href="#m0">implicit_wait</a></td><td rowspan="1">1749106004270</td><td rowspan="1">2867</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">Selenium_Concept.Selenium_Concept.Flilght_booking_site</td><td><a href="#m0">FlightDate_ClassType</a></td><td rowspan="1">1749387870370</td><td rowspan="1">5883</td></tr><tr class="passedeven"><td><a href="#m1">Open_Website</a></td><td rowspan="1">1749387865992</td><td rowspan="1">2251</td></tr><tr class="passedeven"><td><a href="#m2">SearchFromFlight</a></td><td rowspan="1">1749387868250</td><td rowspan="1">1442</td></tr><tr class="passedeven"><td><a href="#m3">SearchTOFlight</a></td><td rowspan="1">1749387869693</td><td rowspan="1">674</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Selenium_Concept.Selenium_Concept.Implicit_wait#implicit_wait</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Selenium_Concept.Selenium_Concept.Flilght_booking_site#FlightDate_ClassType</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Selenium_Concept.Selenium_Concept.Flilght_booking_site#Open_Website</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Selenium_Concept.Selenium_Concept.Flilght_booking_site#SearchFromFlight</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Selenium_Concept.Selenium_Concept.Flilght_booking_site#SearchTOFlight</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
